# seashell

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
scripts/: make-icon.ts  sdk-canary.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sidecar/: sidecar.js
src-tauri/src/: lib.rs  main.rs
src/main/: async-queue.ts  desktop-mcp.ts  history.ts  index.ts  instructions.ts  ipc.ts  memory-files.ts  notify.ts  openrouter.ts  ports.ts  secrets.ts  session-manager.ts  settings-store.ts  terminal.ts  transcript-search.ts  usage-store.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css  main.tsx
src/renderer/src/lib/: api.ts  (+8 more)
src/shared/: ipc-contract.ts  types.ts
src/sidecar/: approvals.ts  auth.ts  changes.ts  commands.ts  desktop-mcp.ts  devserver.ts  dictation.ts  file-index.ts  history.ts  index.ts  ipc.ts  memory-files.ts  notify.ts  paths.ts  pins.ts  platform.ts  ports.ts  previews.ts  project-explain.ts  project-map.ts  retrospective.ts  secrets.ts  session-manager.ts  settings-store.ts  transcript-search.ts  usage-store.ts  worktrees.ts
tests/: heuristics.test.ts  reduce-event.test.ts  sidecar.test.ts
tests/e2e/: onboarding.spec.ts  resume.spec.ts  smoke.spec.ts
(+45 files in other folders)
