[package]
name = "claude-shell"
version = "0.1.0"
description = "Desktop UI for Claude Code"
edition = "2021"

[lib]
name = "claude_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.dev]
incremental = true
